--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-password-checklist": "^1.5.1",
     "react-phone-number-input": "^3.4.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "yup": "^1.4.0",
+    "yup-password": "^0.4.0"
   },
   "description": ""
 }
