--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@types/react-router-dom": "^5.3.3",
@@ -27,9 +28,12 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-leaflet": "^4.2.1",
     "react-password-checklist": "^1.5.1",
     "react-phone-number-input": "^3.4.0",
     "react-router-dom": "^6.22.3",
