--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1",
     "react-password-checklist": "^1.5.1",
     "react-phone-number-input": "^3.4.0",
