--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "proxy":"http://localhost:3000",
   "keywords": [],
   "author": "",
   "license": "ISC",
